--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,6 @@ jsonschema==3.2.0
 Keras-Preprocessing==1.1.2
 keyring==21.8.0
 kiwisolver==1.3.1
-lxml==4.6.2
-Markdown==3.3.3
-MarkupSafe==1.1.1
 matplotlib==3.3.3
 mistune==0.8.4
 nbclient==0.5.1
@@ -47,7 +44,6 @@ nbformat==5.1.2
 nest-asyncio==1.4.3
 notebook==6.2.0
 numpy==1.19.5
-oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.8
 pandocfilters==1.4.3
@@ -72,21 +68,15 @@ pytz==2020.5
 pyzmq==21.0.1
 qtconsole==5.0.1
 QtPy==1.9.0
-readme-renderer==28.0
 requests==2.25.1
-requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
 rsa==4.7
 Send2Trash==1.5.0
 six==1.15.0
 sqlparse==0.4.1
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.4.0
-tensorflow-estimator==2.4.0
+tensorflow-cpu==2.4.0
 tensorflow-object-detection-api==0.1.1
-termcolor==1.1.0
 terminado==0.9.2
 testpath==0.4.4
 tornado==6.1
