--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ rsa==4.7
 Send2Trash==1.5.0
 six==1.15.0
 sqlparse==0.4.1
-tensorflow-cpu==2.4.0
+tensorflow==2.4.0
 tensorflow-object-detection-api==0.1.1
 terminado==0.9.2
 testpath==0.4.4
